# zipline-polygon-bundle

./: .gitignore  README.md  day_with_dupes.txt  download_flat_files.sh  extension.py  fix_2019-08-12.sh  pyproject.toml  wonky data.txt
.github/workflows/: poetry-pypi.yml
scripts/: generate_superbars.py
src/: __init__.py  adjustments.py  concat_all_aggs.py  concat_all_aggs_partitioned.py  config.py  polygon_file_reader.py  process_all_aggs.py  split_aggs_by_ticker.py  tickers_and_names.py  zipline_bundle_polygon.py  zipline_polygon_bundle.py
tests/: assets.ipynb  calendar_test.py  compute_labels.py  compute_signals.py  conditions.ipynb  gainers.ipynb  ingest_trades.py  premarket-old.ipynb  premarket.ipynb  pyarrow.ipynb  quotes.ipynb  test_polygon_file_reader.py  test_superbars.py  ticker_info.py  trades.ipynb  trades2.ipynb  trades_and_quotes.ipynb
zipline_polygon_bundle/: __init__.py  adjustments.py  bundle.py  compute_signals.py  concat_all_aggs.py  concat_all_aggs_partitioned.py  config.py  ingest.py  nyse_all_hours_calendar.py  polygon_file_reader.py  process_all_aggs.py  quotes.py  split_aggs_by_ticker.py  superbars.py  superbars_fixed.py  superbars_old.py  tickers_and_names.py  trades.py
