[project]
name = 'zipline-polygon-bundle'
version = '0.1.0'
description = 'A zipline-reloaded data provider bundle for Polygon.io'
authors = [
    { name = 'Jim White', email = 'jim@fovi.com' },
]
license = { file = 'LICENSE' }
readme = 'README.md'
keywords = ['zipline', 'data-bundle', 'finance']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]

requires-python = '>=3.11'
dependencies = [
    'polygon-api-client',
    'pandas >=2.2,<3',
    'pytz >=2018.5',
    'requests >=2.9.1',
    'bcolz-zipline >=1.2.6',
    'pyarrow',
    'numpy < 2',
    'setuptools >=42.0.0',
    'toolz >=0.8.2',
    'zipline-reloaded >=3.0.0'
]

[project.urls]
Repository = 'https://github.com/fovi-llc/zipline-polygon-bundle'

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools>=42.0.0',
    'setuptools_scm[toml]>=6.2',
    'wheel>=0.36.0',
    # 'Cython>=0.29.21',
    #    'Cython>=3',
    # 'oldest-supported-numpy; python_version>="3.8"',
]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
filterwarnings = [
    # "error",
    # "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:co_lnotab is deprecated, use co_lines instead:DeprecationWarning',
]
